--- a/06/01.md
+++ b/06/01.md
@@ -8,17 +8,18 @@ cd /home
 
 fork會分出子行程，子行程執行結束後會變成殭屍行程，直到父行程完成
 
-cronjob 系統排程
+cronjob 系統排程  
 
 
-確保系統正常運作
+確保系統正常運作  
 
-intitle "關鍵字"
+intitle "關鍵字"  
 
 
 # iptable  
 每次修改都要重啟連線  
 # FireWallD  
+預設白名單模式  
 不需要重啟  
 ## Firewall的zones  
 
