--- a/03/30.md
+++ b/03/30.md
@@ -113,20 +113,27 @@ user:x:1000:1000:user:/home/user:/bin/bash
 
 shadow：存放密碼，密碼為處裡過的密碼，登陸時輸入的字串經加密演算法後進行比對
   
-windows：arp -a
-Linux  ：arp -n
+windows：arp -a  
+Linux  ：arp -n  
 
-中間人攻擊
+中間人攻擊  
 
-sr0 ：dev/cdrom
+sr0 ：dev/cdrom  
 
 ### boot檔
 核心檔案目錄  
 放置系統開機  
 
 ### 目錄相關指令
+顯示當前路徑
 echo $PWD  
 pwd  
+```
+[user@localhost ~]$ pwd
+/home/user
+[user@localhost ~]$ echo $PWD
+/home/user
+```
    owner  group  others
 - |---   |---   |---
 d
@@ -135,7 +142,7 @@ b
 l
 s
 
-也會用數字表示權限
-6   0   0
-110 000 000
-rw_ ___ ___
+也會用數字表示權限  
+6   0   0  
+110 000 000  
+rw_ ___ ___  
