--- a/05/04.md
+++ b/05/04.md
@@ -19,10 +19,32 @@ rm -rf *
 ## df指令
 顯示各分割區剩餘空間   
 加入 -h 讓顯示單位以KB、MB、GB顯示  
+```
+[user@localhost ~]$ df -h
+Filesystem               Size  Used Avail Use% Mounted on
+devtmpfs                 479M     0  479M   0% /dev
+tmpfs                    496M     0  496M   0% /dev/shm
+tmpfs                    496M  7.7M  488M   2% /run
+tmpfs                    496M     0  496M   0% /sys/fs/cgroup
+/dev/mapper/centos-root   47G  9.7G   38G  21% /
+/dev/sda1               1014M  212M  803M  21% /boot
+tmpfs                    100M   36K  100M   1% /run/user/1000
+/dev/sr0                  59M   59M     0 100% /run/media/user/VBox_GAs_6.1.18
+[user@localhost ~]$ df
+Filesystem              1K-blocks     Used Available Use% Mounted on
+devtmpfs                   490452        0    490452   0% /dev
+tmpfs                      507376        0    507376   0% /dev/shm
+tmpfs                      507376     7812    499564   2% /run
+tmpfs                      507376        0    507376   0% /sys/fs/cgroup
+/dev/mapper/centos-root  49250820 10104620  39146200  21% /
+/dev/sda1                 1038336   216888    821448  21% /boot
+tmpfs                      101476       36    101440   1% /run/user/1000
+/dev/sr0                    59724    59724         0 100% /run/media/user/VBox_GAs_6.1.18
 
+```
 
 df -h | grep 指定檔案路徑 | awk "{print $5}" | tr "%" " "  
-指令      指定特定  
+指令      搜尋指定檔案路徑 
   
 $()  
 '()'  
@@ -31,22 +53,27 @@ $()
 a=$(df -h | grep /dev/mapper/centos-root | awk '{print $5}' | tr "%" " " )  
 
 # du指令
-針對目錄  
+檢視目錄使用空間目錄  
 du -h  
 du -h /home/user   
 du -h -s /home/user  
 du -sh /home/user   
-
+```
+[user@localhost ~]$ du -h -s /home/user
+4.4G	/home/user
+[user@localhost ~]$ du -sh /home/user
+4.4G	/home/user
+```
 # 指令輸出入
 ## 重導輸出
-
+把預設輸出到銀幕的結果輸出到指定檔案  
 du -sh /etc
 du -sh /etc 1> result.txt
 du -sh /etc > result.txt
 
-
-ls xxx  2> error
-
+1> 為指令正常運作  
+2> 為指令出現錯誤  
+ls xxx  2> error  
 ```
 [user@localhost ~]$ ls xxx 1> result 2> error
 [user@localhost ~]$ cat result 
@@ -54,20 +81,21 @@ ls xxx  2> error
 ls: cannot access xxx: No such file or directory
 ```
 
-
+2>&1 把2的訊息傳到1 
 ls xxx 1> result 2>&1  
-
 ```
 [user@localhost ~]$ ls xxx 1> result 2>&1
 [user@localhost ~]$ cat result 
 ls: cannot access xxx: No such file or directory
 ```
 
+導向null=導向虛無  
+echo $?：確認指令是否成功  
 ```
-[user@localhost ~]$ ls  1>dv>null 2>&1
+[user@localhost ~]$ ls  1>dev>null 2>&1
 [user@localhost ~]$ echo $?
 0
-[user@localhost ~]$ ls xxx 1>dv>null 2>&1
+[user@localhost ~]$ ls xxx>dev>null 2>&1
 [user@localhost ~]$ echo $?
 2
 ```
@@ -87,21 +115,22 @@ ls: cannot access xxx: No such file or directory
 > woow
 > EOF
 ```
-
-## 管線
-
-
-## wc a
+## wc a  
+計算字數行數位元數指令  
 ```
 [user@localhost ~]$ wc out
 2 2 8 out
+行字位元
 ```
 
 ``` 
 [user@localhost ~]$ wc < out
 2 2 8
 ```
-
+## locate指令  
+查詢檔案路徑  
+因為是從內建資料庫查詢  
+執行前要先做updatedb，更新資料庫  
 ```
 [user@localhost ~]$ touch aassddf
 [user@localhost ~]$ locate aassddf 
@@ -169,8 +198,6 @@ iname 不分大小寫
 ```
 
 d:目錄  
-p:  
-
 ```
 [root@localhost user]# find /home/user -type d -name Downloads
 /home/user/Downloads
@@ -196,25 +223,29 @@ drwxrwxrwt. 83 root root 8192 May  4 11:17 /tmp
 find / -perm 1777  
 ```
 
-SUID位  
+find  .....  -exex 後續指令動作 {}  
+
+find /home/user -name "*.txt" -exec rm -rf {}  
+
+```
+[root@localhost user]# find /home/user/ -type f -name ".*"  
+```
+find . -mtime -7  
+找到7以內的檔案  
+
+## SUID位   
+   owner  group  others  
+- |---   |---   |---
+
 rwsr-x-r-x  
   ^  
 執行期間臨時擁有su權限  
 
 sticky-bit  
-只有傭有者有刪除移動權限  
+只有擁有者有刪除移動權限  
 
-
-find  .....  -exex 後續指令動作 {}  
-
-find /home/user -name "*.txt" -exec rm -rf {}  
-
-
-[root@localhost user]# find /home/user/ -type f -name ".*"  
-
-find . -mtime -7  
-找到7以內的檔案  
-
-
-# 備分參數
-czvf  
+也會用數字表示權限  
+6   0   0  
+110 000 000  
+rw_ ___ ___ 
+ 
