--- a/05/11.md
+++ b/05/11.md
@@ -1,17 +1,5 @@
-IT：Information Technology  
-OT：Operation   Technology  
-CT：Communication Technology  
-
-
-
-5G的發展，不只是速度上的提升，  
-
-6G，是三維的延伸，把通訊拓展到太空、海上  
-
-資通訊產業以10年為周期  
-
-
 # Linux三劍客
+awk 、 sed 、 grep 
 
 ## grep
 對執行的結果進行篩選   
@@ -119,38 +107,43 @@ pp
 ~                                                                                                                                              
 -- INSERT --  
 ```
-esc ：回到命令模式
-i   ：進入編輯模式
-:w  ：寫入後離開
-:q  ：離開
-:q! ：強制離開
-## 正則表達式
-
-
-## sed
-
-## awk
+esc ：回到命令模式  
+i   ：進入編輯模式  
+:w  ：寫入後離開  
+:q  ：離開  
+:q! ：強制離開  
 
 ## mount
-mount -t iso9660 /dev/sr0 /media
-關機
-fdisk /dev/sdb
-n
-p
-enter
-enter
-w
-mkfs -t /dev/sdb1
+mount -t iso9660 /dev/sr0 /media  
+關機  
+fdisk /dev/sdb  
+n  
+p  
+enter  
+enter  
+w  
+mkfs -t /dev/sdb1  
 
-touch a b c
+touch a b c  
 
-mount 只是臨時性的
-umount 不能在mount的資料夾下執行
+mount 只是臨時性的  
+umount 不能在mount的資料夾下執行  
 
-umount 當時位址
-mount 自己要的位置
+umount 當時位址  
+mount 自己要的位置  
 
-mat32
+mat32  
 
-/dev/sdb1       /data   
+/dev/sdb1       /data  
 ## umount
+
+## 補充
+IT：Information Technology  
+OT：Operation   Technology  
+CT：Communication Technology  
+
+5G的發展，不只是速度上的提升，  
+
+6G，是三維的延伸，把通訊拓展到太空、海上  
+
+資通訊產業以10年為周期  
