--- a/05/18.md
+++ b/05/18.md
@@ -1,12 +1,39 @@
+## mount
+mount -t ntfs-3g" /dev/sdc /mnt
+mount /dev/sdb1 /mnt
+關機  
+fdisk /dev/sdb  
+n  
+p  
+enter  
+enter  
+w  
+mkfs -t /dev/sdb1  
+
+touch a b c  
+
+mat32  
+
+/dev/sdb1       /data  
+
 usb 
-lsblk  
-mount /dev/sdb1 /mnt  
+lsblk顯示   
+```
+[user@localhost /]$ lsblk
+NAME            MAJ:MIN RM  SIZE RO TYPE MOUNTPOINT
+sda               8:0    0   50G  0 disk 
+├─sda1            8:1    0    1G  0 part /boot
+└─sda2            8:2    0   49G  0 part 
+  ├─centos-root 253:0    0   47G  0 lvm  /
+  └─centos-swap 253:1    0    2G  0 lvm  [SWAP]
+sdb               8:16   0  800M  0 disk 
+└─sdb1            8:17   0  799M  0 part 
+sr0              11:0    1 58.3M  0 rom  /run/media/user/VBox_GAs_6.1.18
+
+```
+yum install -y epel-release  
 yum install ntfs-3g,m  
-
-
-
-
-
+mount /dev/sdb1 /mnt  
 
 小於1000是系統群組  
 大於1000是一般使用者  
@@ -14,3 +41,19 @@ sshd是
 useradd name  
 /etc/passwd —> user information   
 /etc/shadow—> user password  
+
+
+### 補充  
+mount 只是臨時性的  
+umount 不能在mount的資料夾下執行  
+
+## PDF
+yum install cups-pdf  
+touch a  
+建立一個檔案a  
+gedit a  
+進入編輯頁面  
+點選右上角選項按鈕，點選印表機圖案  
+![](../pic/pdf1.png)
+點選右上角print即可完成   
+![](../pic/pdf2.png)
