--- a/05/25.md
+++ b/05/25.md
@@ -74,6 +74,8 @@ watch -n 1 free -h
 ab -n 100000 -c 1000  
 
 ## ctrl + c和ctrl + z
+ctrl + c 是結束程式  
+ctrl + z 是暫停程式  
 ```
 [user@localhost ~]$ sleep 120
 ^C
@@ -87,8 +89,15 @@ user      7846  7799  0 11:00 pts/0    00:00:00 ps -f
 [user@localhost ~]$ ps -f
 UID        PID  PPID  C STIME TTY          TIME CMD
 user      7799  7792  0 11:00 pts/0    00:00:00 bash
-user      7853  7799  0 11:00 pts/0    00:00:00 sleep 120
-user      7868  7799  0 11:00 pts/0    00:00:00 ps -f
+user      7853  7799  0 11:00 pts/0    00:00:00 sleep 120  <----程式還在
+user      7868  7799  0 11:00 pts/0    00:00:00 ps -f   
+```
+## jobs bg fg
+jobs：顯示目前存在的程式  
+bg  ：顯示背景中的程式
+fg  ：顯示前景中的程式
+fg 1：顯示前景中的第1個程式
+```
 [user@localhost ~]$ jobs
 [1]+  Stopped                 sleep 120
 [user@localhost ~]$ bg
@@ -109,6 +118,3 @@ kill -9 強制刪除
 pkill sshd  
 
 killall  
-
-個人熱點  
-echo 1 >   
