--- a/04/27.md
+++ b/04/27.md
@@ -8,7 +8,7 @@ https有加密，但要申請憑證
 10.0.0.2：  
 python -m SimpleHTTPServer 80  
 
-防火牆指令  
+## 防火牆指令  
 iptables -A INPUT -p tcp --destination-port 22 -j ACCEPT  
 
 
@@ -21,20 +21,19 @@ yum install wireshark
 yum install wireshark-*  
 
  
-遠端port連線  
-
+## 遠端port連線  
 2:  
 ifconfig enp0s10 192.168.2.2/24  
-ifconfig enp0s9 0  
-1:  
+ifconfig enp0s9 0    
   
-添加路由表  
+## 添加路由表  
+1:  
 ip route add default via 192.168.0.254  
 route -n  
 
-開啟熱點  
+## 開啟熱點  
 echo 1 >/proc/sys/net/ipv4/ip_forward  
-關閉熱點  
+## 關閉熱點  
 echo 0 >/proc/sys/net/ipv4/ip_forward  
 
 ssh -Nf -R 10.0.0.1:7777:192.168.0.1:80 user@10.0.0.1  
