--- a/06/08.md
+++ b/06/08.md
@@ -2,45 +2,140 @@
 預設沒有任何規則  
 
 ## iptables -A INPUT s 192.168.1.0/24 -j DROP
-在3號主機執行，只要是來自192.168.1.0/24的動作都會擋住
+在3號主機執行，只要是來自192.168.1.0/24的動作都會擋住  
 
-1號主機想ping3號會被擋住
-[](../../pic/iptables1.png)
+1號主機想ping3號會被擋住  
+![](../pic/iptables1.png)  
 
 ## iptables -A INPUT -s 192.168.1.1/32 -p tcp --dport 80 --j DROP
-針對單一主機的特定協定進行阻擋
-1號主機可以ping到3號主機，但curl卻會被阻擋
-[](../../pic/input.png)
+針對單一主機的特定協定進行阻擋  
+1號主機可以ping到3號主機，但curl卻會被阻擋  
+![](../pic/input.png)  
 ## iptables -L -n
-[](../../pic/iptables2.png)
+![](../pic/iptables2.png)  
 
 
 ## iptables -A OUTPUT -p tcp --dport 80 -j DROP
 在2號主機上加入output的規定  
-1號主機可以curl，但2號主機不行  
-[](../../pic/output.png)
+1號主機可以curl，但2號主機不行    
+![](../pic/output.png)   
 
-## 第九章 備分
 
-打包與壓縮
+# 第九章 備分
+## 參考網站
+[GNU / Linux 各種壓縮與解壓縮指令](http://note.drx.tw/2008/04/command.html)
+打包與壓縮  
 
 ## 打包(tar)
-## 壓縮(zip)
-用zip壓縮，在linux與windows間傳送檔案
-zip是linux 和 windows通用格式
+tar cvf (打包後的檔案) (要打包的檔案或目錄)  
+```
+[root@localhost ~]# tar cvf test.tar test  
+test/
+test/a
+test/b
+test/c
+test/d
+[root@localhost ~]# ls
+anaconda-ks.cfg  initial-setup-ks.cfg  test  test.tar
+```
+tar xvf (打包檔)  
+解壓縮打包檔
+```
+[root@localhost ~]# tar xvf test.tar
+test/
+test/a
+test/b
+test/c
+test/d
+[root@localhost ~]# ls
+anaconda-ks.cfg  initial-setup-ks.cfg  test  test.tar
+```
+
+
+## gzip壓縮  
+壓縮檔案  
+gzip (檔案)  
+```
+[root@localhost ~]# touch testfile
+[root@localhost ~]# gzip testfile 
+[root@localhost ~]# ls
+anaconda-ks.cfg  initial-setup-ks.cfg  test  testfile.gz  test.tar
+```
+解壓縮檔案  
+gunzip (檔案)  
+```
+[root@localhost ~]# ls
+anaconda-ks.cfg  initial-setup-ks.cfg  test  testfile.gz  test.tar
+[root@localhost ~]# gunzip testfile.gz 
+[root@localhost ~]# ls
+anaconda-ks.cfg  initial-setup-ks.cfg  test  testfile  test.tar
+```
+
+## zip壓縮
+zip是linux 和 windows通用格式  
+用zip壓縮，在linux與windows間傳送檔案  
+  
+壓縮檔案   
+zip -r (壓縮檔檔名) (要壓縮的檔案) 
+```
+[root@localhost ~]# ls
+anaconda-ks.cfg  initial-setup-ks.cfg  test  testfile  test.tar
+[root@localhost ~]# zip -r testfile.zip testfile 
+  adding: testfile (stored 0%)
+[root@localhost ~]# ls
+anaconda-ks.cfg  initial-setup-ks.cfg  test  testfile  testfile.zip  test.tar
+```
+  
+解壓縮檔案  
+unzip (壓縮檔檔名) 
+```
+[root@localhost ~]# ls
+anaconda-ks.cfg  initial-setup-ks.cfg  test  testfile.zip  test.tar
+[root@localhost ~]# unzip testfile.zip 
+Archive:  testfile.zip
+ extracting: testfile                
+[root@localhost ~]# ls
+anaconda-ks.cfg  initial-setup-ks.cfg  test  testfile  testfile.zip  test.tar
+```
+
 ## test -> test.tar.gz
 
-.tar.gz 打包再壓縮的檔案
+.tar.gz 打包再壓縮的檔案  
 
-一次解壓縮解打包
-tar xvfz test.gz
+一次壓縮解打包  
+tar cvfz test.gz  
+```
+[root@localhost ~]# ls
+anaconda-ks.cfg  initial-setup-ks.cfg  test
+[root@localhost ~]# tar czvf test.tar.gz test/
+test/
+test/a
+test/b
+test/c
+test/d
+[root@localhost ~]# ls
+anaconda-ks.cfg  initial-setup-ks.cfg  test  test.tar.gz
 
-tar cvfz test.tar.gz test
+```
+一次解打包解壓縮檔案  
+tar xvfz test.tar.gz test  
+```
+[root@localhost ~]# ls
+anaconda-ks.cfg  initial-setup-ks.cfg  test.tar.gz
+[root@localhost ~]# tar xzvf test.tar.gz test/
+test/
+test/a
+test/b
+test/c
+test/d
+[root@localhost ~]# ls
+anaconda-ks.cfg  initial-setup-ks.cfg  test  test.tar.gz
+```
 
 ## bz
-可提供更高壓縮比
+可提供更高壓縮比  
 
-dd if=/dev/zero of=16 count=1024 bs=1M
+dd if=/dev/zero of=16 count=1024 bs=1M  
 
 gzip test.rar
 bzip2 test.rar
