--- a/06/15.md
+++ b/06/15.md
@@ -1,16 +1,58 @@
 # 設定磁碟使用量配額
 
+## 參考網站
+[How to enable User and Group Disk Quota on CentOS 7 / RHEL 7](https://www.linuxtechi.com/enable-user-group-disk-quota-on-centos-7-rhel-7/)
 ## 把資料夾從磁碟獨立出來
-vim /etc/fstab
-  
-mount -o remount /home
-  
-重開機  
-mount | grep /home
-  
+建立一個新虛擬機  
+在software selection選擇 GNOME Desktop  
+<image src="../pic/空間分配3.png">  
+在INSTALLATION DESTINATION下方選項點選 `I will configure patitioning`  
+<image src="../pic/空間分配4.png">
+再點選 `Add a disk`  
+選擇Standard Partition，點擊下方+字號，進行空間規畫    
+<image src="../pic/空間分配5.png">
+規劃如下  
+<image src="../pic/空間分配7.png">  
+後面按正常步驟進行  
 
+安裝完成後，進入terminal  
+執行 vim /etc/fstab    
+在/home的欄位進行添加usrquota,grpquota  
+<image src="../pic/空間分配8.png">  
+執行  
+mount -o remount /home  
+mount | grep /home  
+如果顯示為noquota，請執行 reboot 重新開機  
+<image src="../pic/空間分配9.png">  
+添加新使用者tom  
+useradd tom  
+passwd tom  
+  
+確定tom有新增成功  
+id tom  
 
-## 
+執行  
+xfs_quota -xc 'limit bsoft=10m bhard=12m tom' /home  
+xfs_quota -xc 'report -h' /home  
+確認分配成功  
+<image src="../pic/空間分配10.png">  
+  
+執行  
+dd if=/dev/zero of=testfile bs=1M count=13  
+顯示為error，代表他的確只有12M的空間  
+<image src="../pic/空間分配11.png">  
+  
+執行 edquota -u tom  
+修改 soft 和 hard欄位  
+<image src="../pic/空間分配12.png">  
+  
+xfs_quota -xc 'report -h' /home  
+確認修改成功  
+<image src="../pic/空間分配13.png">  
+再執行
+dd if=/dev/zero of=testfile bs=1M count=13  
+執行成功，代表有擴大空間  
+
 # 系統時區
 系統時區檔案位於/etc/localtime  
 
