--- a/06/15.md
+++ b/06/15.md
@@ -52,7 +52,7 @@ xfs_quota -xc 'report -h' /home
 再執行
 dd if=/dev/zero of=testfile bs=1M count=13  
 執行成功，代表有擴大空間  
-
+<image src="../pic/空間分配14.png">  
 # 系統時區
 系統時區檔案位於/etc/localtime  
 
