--- a/06/01.md
+++ b/06/01.md
@@ -1,28 +1,11 @@
-./test.sh and bash test.sh 不會切換
-
-source和. 會切換
-
-source test.sh
-. test.sh       都是在原本的行程
-cd /home
-
-fork會分出子行程，子行程執行結束後會變成殭屍行程，直到父行程完成
-
-cronjob 系統排程  
-
-
-確保系統正常運作  
-
-intitle "關鍵字"  
-
-
-# iptable  
-每次修改都要重啟連線  
 # FireWallD  
 預設白名單模式  
 不需要重啟  
 ## Firewall的zones  
-
+開啟防火牆  
+systemctl start firewalld  
+查看防火牆設定  
+systemctl status firewalld  
 ```
 [root@localhost user]# systemctl start firewalld
 [root@localhost user]# systemctl status firewalld
@@ -43,7 +26,8 @@ Hint: Some lines were ellipsized, use -l to show in full.
 public
   interfaces: enp0s3 enp0s8 enp0s9
 ```
-
+查看public的防火牆設定  
+firewall-cmd --zone=public --list-all  
 ```
 [root@localhost user]# firewall-cmd --zone=public --list-all
 public (active)
@@ -59,8 +43,4 @@ public (active)
   source-ports: 
   icmp-blocks: 
   rich rules: 
-```
-firewall-cmd --add-service=http permanent
-
-
-希望服務只針對特定連接
+```  
