--- a/06/08.md
+++ b/06/08.md
@@ -1,25 +1,35 @@
 # IPtables
 預設沒有任何規則  
+每次修改都要重啟連線  
+## 環境
+先建立三台虛擬主機  
+<image src="../pic/三台主機.png">  
 
-## iptables -A INPUT s 192.168.1.0/24 -j DROP
-在3號主機執行，只要是來自192.168.1.0/24的動作都會擋住  
+## iptables -L -n  
+顯示IPtables目前的規定
+<image src="../pic/iptables2.png">  
 
+## INPUT  
+在3號主機執行  
+iptables -A INPUT s 192.168.1.0/24 -j DROP  
+只要是來自192.168.1.0/24的請求都會擋住  
+  
 1號主機想ping3號會被擋住  
-![](../pic/iptables1.png)  
+<image src="../pic/iptables1.png">  
 
-## iptables -A INPUT -s 192.168.1.1/32 -p tcp --dport 80 --j DROP
+## INPUT -p 
+在3號主機執行  
+iptables -A INPUT -s 192.168.1.1/32 -p tcp --dport 80 --j DROP  
 針對單一主機的特定協定進行阻擋  
+  
 1號主機可以ping到3號主機，但curl卻會被阻擋  
-![](../pic/input.png)  
-## iptables -L -n
-![](../pic/iptables2.png)  
+<image src="../pic/input.png">  
 
-
-## iptables -A OUTPUT -p tcp --dport 80 -j DROP
+## OUTPUT  
 在2號主機上加入output的規定  
-1號主機可以curl，但2號主機不行    
-![](../pic/output.png)   
-
+iptables -A OUTPUT -p tcp --dport 80 -j DROP  
+1號主機可以curl，但2號主機不行  
+<image src="../pic/output.png">  
 
 # 第九章 備分
 ## 參考網站
