--- a/06/08.md
+++ b/06/08.md
@@ -4,7 +4,20 @@
 ## 環境
 先建立三台虛擬主機  
 <image src="../pic/三台主機.png">  
-
+在virtual box設定中的`網路`新增內網  
+分別為1跟2的內網A、2跟3的內網B  
+接著開啟3台主機進行操作 
+設定對應的介面卡位址   
+在1、3號機執行ip route指令  
+  
+在2號主機執行  
+echo >1 /proc/sys/net/ipv4/ip_forward  
+其作用為讓2號主機成為橋梁  
+讓不同內網的1號機和3號機能連上  
+可以讓1、3互ping測試   
+下方為指令示意圖  
+<image src="../pic/內網設定.png">  
+  
 ## iptables -L -n  
 顯示IPtables目前的規定
 <image src="../pic/iptables2.png">  
