--- a/06/08.md
+++ b/06/08.md
@@ -6,6 +6,7 @@
 <image src="../pic/三台主機.png">  
 在virtual box設定中的`網路`新增內網  
 分別為1跟2的內網A、2跟3的內網B  
+  
 接著開啟3台主機進行操作 
 設定對應的介面卡位址   
 在1、3號機執行ip route指令  
@@ -19,30 +20,34 @@ echo >1 /proc/sys/net/ipv4/ip_forward
 <image src="../pic/內網設定.png">  
   
 ## iptables -L -n  
-顯示IPtables目前的規定
+顯示IPtables目前的規定  
 <image src="../pic/iptables2.png">  
 
 ## INPUT  
+管制進入的流量   
+  
 在3號主機執行  
 iptables -A INPUT s 192.168.1.0/24 -j DROP  
 只要是來自192.168.1.0/24的請求都會擋住  
   
 1號主機想ping3號會被擋住  
-<image src="../pic/iptables1.png">  
-
-## INPUT -p 
-在3號主機執行  
-iptables -A INPUT -s 192.168.1.1/32 -p tcp --dport 80 --j DROP  
-針對單一主機的特定協定進行阻擋  
-  
-1號主機可以ping到3號主機，但curl卻會被阻擋  
 <image src="../pic/input.png">  
 
 ## OUTPUT  
+管制從自身發出的流量  
+  
 在2號主機上加入output的規定  
 iptables -A OUTPUT -p tcp --dport 80 -j DROP  
 1號主機可以curl，但2號主機不行  
 <image src="../pic/output.png">  
+
+## FORWARD
+管制通過的流量  
+  
+在2號主機上加入output的規定  
+iptables -A FORWARD -p tcp --dport 80 -j DROP  
+2號主機可以curl，但1號主機不行  
+<image src="../pic/iptable_forward.png">  
 
 # 第九章 備分
 ## 參考網站
