--- a/03/30.md
+++ b/03/30.md
@@ -17,10 +17,10 @@ echo $?：上個指令執行成功與否
 
 ```
 絕對路徑(absolute path)：從根目錄開始描述檔案位置  
-EX：/path1/path2  
+EX：/path1/path2/.../a.txt  
 
 相對路徑(relative path)：從目前位置開始描述檔案位置  
-EX：
+EX：./a.txt
 ```
 ```
 . ：目前所在目錄  
@@ -90,7 +90,7 @@ zip指令：查看檔案的詳細資訊
 zip: ELF 64-bit LSB executable, x86-64, version 1 (SYSV), dynamically linked (uses shared libs), for GNU/Linux 2.6.32, BuildID[sha1]=7c01940c97abdf45a093c697e63ef214ea14adcf, stripped
 ```
 
-sync：把暫時存在記憶體的資料放進硬體
+sync：把暫時存在記憶體的資料放進硬體  
 mail：寄發信件  
 ### sbin檔
 super user的bin檔  
@@ -104,14 +104,14 @@ swapoff：使用硬碟充當模擬環境，開啟就是swapon
 
 ### etc資料夾
 使用者帳號密碼都放在這裡  
-系統設定檔  
+系統設定檔    
 只有系統管理員能改  
-需要定期備份  
-一般使用者帳號：
-系統使用者帳號：專門跑伺服器用的
-user:x:1000:1000:user:/home/user:/bin/bash
-
-shadow：存放密碼，密碼為處裡過的密碼，登陸時輸入的字串經加密演算法後進行比對
+需要定期備份   
+一般使用者帳號：  
+系統使用者帳號：專門跑伺服器用的  
+user:x:1000:1000:user:/home/user:/bin/bash  
+  
+shadow：存放密碼，密碼為處裡過的密碼，登陸時輸入的字串經加密演算法後進行比對  
   
 windows：arp -a  
 Linux  ：arp -n  
@@ -125,7 +125,7 @@ sr0 ：dev/cdrom
 放置系統開機  
 
 ### 目錄相關指令
-顯示當前路徑
+顯示當前路徑  
 echo $PWD  
 pwd  
 ```
